[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning_project"
version = "0.1.0"
dependencies = ["emoji",]

[tool.pytest.ini_options]
addopts = ["-v", "--import-mode=importlib",]
testpaths = ["tests",]

[dependency-groups]
dev = [
    "emoji>=2.14.0",
]
